[package]
name = "stackoverflow"
version = "0.1.0"
authors = ["MuhtasimTanmoy <taaanmo0oy@gmail.com>"]
edition = "2018"

[lib]
name = "stackoverflow"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
